--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 server.port=8087
 
-springdoc.api-docs.path=/bookstore-docs
+#springdoc.api-docs.path=/bookstore-docs
 
 
 spring.mail.host=smtp.gmail.com
